<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity.Main.MainActivity">
    <item
        android:id="@+id/optOK"
        android:orderInCategory="100"
        android:title="@string/action_btnOk"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/optCancel"
        android:orderInCategory="100"
        android:title="@string/action_btnCancel"
        app:showAsAction="always" />
    <item
        android:id="@+id/optviewAll"
        android:orderInCategory="100"
        android:title="@string/action_btnviewAll"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
