<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity.Main.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:onClick="dispatchTakePictureIntent"
        android:background="@android:drawable/gallery_thumb"
        android:layout_above="@+id/input_layout_last" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:id="@+id/txtName"
            android:hint="@string/hint_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_name"
        android:layout_toRightOf="@+id/imageView">
        <EditText
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:id="@+id/txtLast"
            android:hint="@string/hint_last"/>

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/btnDOB"
        android:layout_below="@+id/input_layout_last"
        android:layout_toRightOf="@+id/imageView"
        android:onClick="submitDOB"
        />

    <RadioGroup
        android:id="@+id/rdGr"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_span="3"
        android:layout_below="@+id/btnDOB"
        >
        <!-- android:checkedButton="@+id/rdbOne"-->

        <RadioButton
            android:id="@+id/rdbTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdb2"
            android:layout_below="@+id/rdGr"
            android:layout_alignRight="@+id/spinner"
            android:layout_alignEnd="@+id/spinner" />

        <RadioButton
            android:id="@+id/rdbOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdb1"
            android:layout_below="@+id/rdbTwo"
            android:layout_centerHorizontal="true" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv"
        android:textSize="10sp"
        android:id="@+id/textView"
        android:layout_below="@+id/rdGr"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/country"
        android:layout_toRightOf="@+id/textView"
        android:layout_below="@id/rdGr">

    </Spinner>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv2"
        android:textSize="10sp"
        android:layout_below="@+id/spinner"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textView2"
        android:layout_below="@+id/spinner">
        <EditText
            android:id="@+id/txtArea"
            android:inputType="textMultiLine"
            android:lines="20"
            android:minLines="3"
            android:gravity="top|left"
            android:maxLines="20"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv3"
        android:textSize="10sp"
        android:layout_below="@+id/input_layout_address"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView3"
        android:layout_below="@+id/input_layout_address">
        <EditText
            android:id="@+id/txtEmail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
             />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/btnOK"
        android:layout_below="@+id/input_layout_email"
        android:onClick="submit"
        />
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/btnCancel"
        android:layout_below="@+id/input_layout_email"
        android:layout_toRightOf="@id/btnOK"
        android:onClick="cancel"
        />
    <Button
        android:id="@+id/viewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/btnViewAll"
        android:layout_below="@+id/input_layout_email"
        android:layout_toRightOf="@id/btnCancel"
        android:onClick="viewAll"
        />

</RelativeLayout>
